Update Javadoc from CrisisMod/CrisisMod@e7f6854e6d9c97fc5e2f8c07b32a57193791018b CrisisMod/CrisisMod@e7f6854e6d9c97fc5e2f8c07b32a57193791018b

--- a/overview-tree.html
+++ b/overview-tree.html
@@ -57,6 +57,8 @@ loadScripts(document, 'script');</script>
 <li><a href="ema_08_/crisisMod/blockEntities/props/package-tree.html">ema_08_.crisisMod.blockEntities.props</a>, </li>
 <li><a href="ema_08_/crisisMod/blocks/package-tree.html">ema_08_.crisisMod.blocks</a>, </li>
 <li><a href="ema_08_/crisisMod/blocks/props/package-tree.html">ema_08_.crisisMod.blocks.props</a>, </li>
+<li><a href="ema_08_/crisisMod/clans/package-tree.html">ema_08_.crisisMod.clans</a>, </li>
+<li><a href="ema_08_/crisisMod/clans/data/package-tree.html">ema_08_.crisisMod.clans.data</a>, </li>
 <li><a href="ema_08_/crisisMod/client/package-tree.html">ema_08_.crisisMod.client</a>, </li>
 <li><a href="ema_08_/crisisMod/client/guis/package-tree.html">ema_08_.crisisMod.client.guis</a>, </li>
 <li><a href="ema_08_/crisisMod/client/models/package-tree.html">ema_08_.crisisMod.client.models</a>, </li>
@@ -133,6 +135,9 @@ loadScripts(document, 'script');</script>
 </li>
 </ul>
 </li>
+<li class="circle">ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/Clan.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.data">Clan</a></li>
+<li class="circle">ema_08_.crisisMod.clans.<a href="ema_08_/crisisMod/clans/ClanManager.html" class="type-name-link" title="class in ema_08_.crisisMod.clans">ClanManager</a></li>
+<li class="circle">ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/ClanMember.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.data">ClanMember</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.<a href="ema_08_/crisisMod/utils/commands/CommandBuilder.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands">CommandBuilder</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.abstr.<a href="ema_08_/crisisMod/utils/commands/abstr/CommandParts.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands.abstr">CommandParts</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.abstr.<a href="ema_08_/crisisMod/utils/commands/abstr/CommandParts.CommandArgument.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands.abstr">CommandParts.CommandArgument</a></li>
@@ -197,6 +202,8 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Enum.html" class="type-name-link external-link" title="class or interface in java.lang">Enum</a>&lt;E&gt; (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Comparable.html" title="class or interface in java.lang" class="external-link">Comparable</a>&lt;T&gt;, java.lang.constant.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/constant/Constable.html" title="class or interface in java.lang.constant" class="external-link">Constable</a>, java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
+<li class="circle">ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/ClanRelations.html" class="type-name-link" title="enum class in ema_08_.crisisMod.clans.data">ClanRelations</a></li>
+<li class="circle">ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/ClanRole.html" class="type-name-link" title="enum class in ema_08_.crisisMod.clans.data">ClanRole</a></li>
 <li class="circle">ema_08_.crisisMod.utils.lootSystem.<a href="ema_08_/crisisMod/utils/lootSystem/LootMaxItemStackSizes.html" class="type-name-link" title="enum class in ema_08_.crisisMod.utils.lootSystem">LootMaxItemStackSizes</a></li>
 <li class="circle">ema_08_.crisisMod.utils.lootSystem.<a href="ema_08_/crisisMod/utils/lootSystem/LootRenewDelays.html" class="type-name-link" title="enum class in ema_08_.crisisMod.utils.lootSystem">LootRenewDelays</a></li>
 <li class="circle">ema_08_.crisisMod.utils.lootSystem.<a href="ema_08_/crisisMod/utils/lootSystem/LootSpawnPercentages.html" class="type-name-link" title="enum class in ema_08_.crisisMod.utils.lootSystem">LootSpawnPercentages</a></li>
