Update Javadoc from CrisisMod/CrisisMod@5b53c086310bea11867df67f7367479cdac087c9 CrisisMod/CrisisMod@5b53c086310bea11867df67f7367479cdac087c9

--- a/overview-tree.html
+++ b/overview-tree.html
@@ -137,7 +137,7 @@ loadScripts(document, 'script');</script>
 </li>
 <li class="circle">ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/Clan.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.data">Clan</a></li>
 <li class="circle">ema_08_.crisisMod.clans.<a href="ema_08_/crisisMod/clans/ClanManager.html" class="type-name-link" title="class in ema_08_.crisisMod.clans">ClanManager</a></li>
-<li class="circle">ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/ClanMember.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.data">ClanMember</a></li>
+<li class="circle">ema_08_.crisisMod.network.packets.<a href="ema_08_/crisisMod/network/packets/ClanSyncPacket.html" class="type-name-link" title="class in ema_08_.crisisMod.network.packets">ClanSyncPacket</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.<a href="ema_08_/crisisMod/utils/commands/CommandBuilder.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands">CommandBuilder</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.abstr.<a href="ema_08_/crisisMod/utils/commands/abstr/CommandParts.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands.abstr">CommandParts</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.abstr.<a href="ema_08_/crisisMod/utils/commands/abstr/CommandParts.CommandArgument.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands.abstr">CommandParts.CommandArgument</a></li>
@@ -171,6 +171,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">ema_08_.crisisMod.utils.lootSystem.<a href="ema_08_/crisisMod/utils/lootSystem/LootTableEntry.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.lootSystem">LootTableEntry</a></li>
 <li class="circle">ema_08_.crisisMod.<a href="ema_08_/crisisMod/ModClass.html" class="type-name-link" title="class in ema_08_.crisisMod">ModClass</a></li>
 <li class="circle">ema_08_.crisisMod.registries.<a href="ema_08_/crisisMod/registries/ModRegistry.html" class="type-name-link" title="class in ema_08_.crisisMod.registries">ModRegistry</a></li>
+<li class="circle">ema_08_.crisisMod.client.renderers.<a href="ema_08_/crisisMod/client/renderers/NameTagRenderer.html" class="type-name-link" title="class in ema_08_.crisisMod.client.renderers">NameTagRenderer</a></li>
 <li class="circle">ema_08_.crisisMod.network.<a href="ema_08_/crisisMod/network/NetworkHandler.html" class="type-name-link" title="class in ema_08_.crisisMod.network">NetworkHandler</a></li>
 <li class="circle">ema_08_.crisisMod.utils.<a href="ema_08_/crisisMod/utils/NtbUtils.html" class="type-name-link" title="class in ema_08_.crisisMod.utils">NtbUtils</a></li>
 <li class="circle">ema_08_.crisisMod.server.<a href="ema_08_/crisisMod/server/PlayerData.html" class="type-name-link" title="class in ema_08_.crisisMod.server">PlayerData</a></li>
