--- a/ema_08_/crisisMod/client/renderers/package-tree.html
+++ b/ema_08_/crisisMod/client/renderers/package-tree.html
@@ -64,6 +64,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">ema_08_.crisisMod.client.renderers.<a href="PropEntityRenderer.html" class="type-name-link" title="class in ema_08_.crisisMod.client.renderers">PropEntityRenderer</a></li>
 </ul>
 </li>
+<li class="circle">ema_08_.crisisMod.client.renderers.<a href="NameTagRenderer.html" class="type-name-link" title="class in ema_08_.crisisMod.client.renderers">NameTagRenderer</a></li>
 </ul>
 </li>
 </ul>
