Update Javadoc from CrisisMod/CrisisMod@b4810ef8f4f4d5b3dfb90f4442e5b2a687229e74 CrisisMod/CrisisMod@b4810ef8f4f4d5b3dfb90f4442e5b2a687229e74

--- a/index-all.html
+++ b/index-all.html
@@ -59,7 +59,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Creates and adds a new clan with the specified name.</div>
 </dd>
-<dt><a href="ema_08_/crisisMod/clans/data/Clan.html#addDeathMarks(int)" class="member-name-link">addDeathMarks(int)</a> - Method in class ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/Clan.html" title="class in ema_08_.crisisMod.clans.data">Clan</a></dt>
+<dt><a href="ema_08_/crisisMod/clans/data/Clan.html#addDeadMarks(int)" class="member-name-link">addDeadMarks(int)</a> - Method in class ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/Clan.html" title="class in ema_08_.crisisMod.clans.data">Clan</a></dt>
 <dd>
 <div class="block">Adds dead marks to the clan bank.</div>
 </dd>
@@ -658,7 +658,9 @@ loadScripts(document, 'script');</script>
 <h2 class="title" id="I:N">N</h2>
 <dl class="index">
 <dt><a href="ema_08_/crisisMod/client/renderers/NameTagRenderer.html" class="type-name-link" title="class in ema_08_.crisisMod.client.renderers">NameTagRenderer</a> - Class in <a href="ema_08_/crisisMod/client/renderers/package-summary.html">ema_08_.crisisMod.client.renderers</a></dt>
-<dd>&nbsp;</dd>
+<dd>
+<div class="block">Client-side renderer that modifies player nametags based on clan relationships.</div>
+</dd>
 <dt><a href="ema_08_/crisisMod/client/renderers/NameTagRenderer.html#%3Cinit%3E()" class="member-name-link">NameTagRenderer()</a> - Constructor for class ema_08_.crisisMod.client.renderers.<a href="ema_08_/crisisMod/client/renderers/NameTagRenderer.html" title="class in ema_08_.crisisMod.client.renderers">NameTagRenderer</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="ema_08_/crisisMod/network/NetworkHandler.html" class="type-name-link" title="class in ema_08_.crisisMod.network">NetworkHandler</a> - Class in <a href="ema_08_/crisisMod/network/package-summary.html">ema_08_.crisisMod.network</a></dt>
@@ -725,7 +727,9 @@ loadScripts(document, 'script');</script>
 <dt><a href="ema_08_/crisisMod/blocks/props/Prop.html#onRemove(net.minecraft.world.level.block.state.BlockState,net.minecraft.world.level.Level,net.minecraft.core.BlockPos,net.minecraft.world.level.block.state.BlockState,boolean)" class="member-name-link">onRemove(BlockState, Level, BlockPos, BlockState, boolean)</a> - Method in class ema_08_.crisisMod.blocks.props.<a href="ema_08_/crisisMod/blocks/props/Prop.html" title="class in ema_08_.crisisMod.blocks.props">Prop</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="ema_08_/crisisMod/client/renderers/NameTagRenderer.html#onRenderNameTag(net.minecraftforge.client.event.RenderNameTagEvent)" class="member-name-link">onRenderNameTag(RenderNameTagEvent)</a> - Method in class ema_08_.crisisMod.client.renderers.<a href="ema_08_/crisisMod/client/renderers/NameTagRenderer.html" title="class in ema_08_.crisisMod.client.renderers">NameTagRenderer</a></dt>
-<dd>&nbsp;</dd>
+<dd>
+<div class="block">Handles the rendering of player nametags based on clan relationships.</div>
+</dd>
 <dt><a href="ema_08_/crisisMod/client/HudDisplayer.html#onRenderOverlay(net.minecraftforge.client.event.RenderGuiOverlayEvent)" class="member-name-link">onRenderOverlay(RenderGuiOverlayEvent)</a> - Method in class ema_08_.crisisMod.client.<a href="ema_08_/crisisMod/client/HudDisplayer.html" title="class in ema_08_.crisisMod.client">HudDisplayer</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="ema_08_/crisisMod/ModClass.html#onServerStarting(net.minecraftforge.event.server.ServerStartingEvent)" class="member-name-link">onServerStarting(ServerStartingEvent)</a> - Method in class ema_08_.crisisMod.<a href="ema_08_/crisisMod/ModClass.html" title="class in ema_08_.crisisMod">ModClass</a></dt>
@@ -813,7 +817,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Removes a clan from the system.</div>
 </dd>
-<dt><a href="ema_08_/crisisMod/clans/data/Clan.html#removeDeathMarks(int)" class="member-name-link">removeDeathMarks(int)</a> - Method in class ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/Clan.html" title="class in ema_08_.crisisMod.clans.data">Clan</a></dt>
+<dt><a href="ema_08_/crisisMod/clans/data/Clan.html#removeDeadMarks(int)" class="member-name-link">removeDeadMarks(int)</a> - Method in class ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/Clan.html" title="class in ema_08_.crisisMod.clans.data">Clan</a></dt>
 <dd>
 <div class="block">Removes dead marks from the clan bank.</div>
 </dd>
