Update Javadoc from CrisisMod/CrisisMod@03c78018f7e4a5605abddd1ade5bc8f874cd6ad4 CrisisMod/CrisisMod@03c78018f7e4a5605abddd1ade5bc8f874cd6ad4

--- a/ema_08_/crisisMod/clans/package-tree.html
+++ b/ema_08_/crisisMod/clans/package-tree.html
@@ -59,7 +59,9 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
+<li class="circle">ema_08_.crisisMod.clans.<a href="ClanDamageHandler.html" class="type-name-link" title="class in ema_08_.crisisMod.clans">ClanDamageHandler</a></li>
 <li class="circle">ema_08_.crisisMod.clans.<a href="ClanManager.html" class="type-name-link" title="class in ema_08_.crisisMod.clans">ClanManager</a></li>
+<li class="circle">ema_08_.crisisMod.clans.<a href="ClanNotificationHandler.html" class="type-name-link" title="class in ema_08_.crisisMod.clans">ClanNotificationHandler</a></li>
 </ul>
 </li>
 </ul>
