--- a/overview-tree.html
+++ b/overview-tree.html
@@ -58,7 +58,10 @@ loadScripts(document, 'script');</script>
 <li><a href="ema_08_/crisisMod/blocks/package-tree.html">ema_08_.crisisMod.blocks</a>, </li>
 <li><a href="ema_08_/crisisMod/blocks/props/package-tree.html">ema_08_.crisisMod.blocks.props</a>, </li>
 <li><a href="ema_08_/crisisMod/clans/package-tree.html">ema_08_.crisisMod.clans</a>, </li>
+<li><a href="ema_08_/crisisMod/clans/commands/package-tree.html">ema_08_.crisisMod.clans.commands</a>, </li>
 <li><a href="ema_08_/crisisMod/clans/data/package-tree.html">ema_08_.crisisMod.clans.data</a>, </li>
+<li><a href="ema_08_/crisisMod/clans/network/package-tree.html">ema_08_.crisisMod.clans.network</a>, </li>
+<li><a href="ema_08_/crisisMod/clans/relations/package-tree.html">ema_08_.crisisMod.clans.relations</a>, </li>
 <li><a href="ema_08_/crisisMod/client/package-tree.html">ema_08_.crisisMod.client</a>, </li>
 <li><a href="ema_08_/crisisMod/client/guis/package-tree.html">ema_08_.crisisMod.client.guis</a>, </li>
 <li><a href="ema_08_/crisisMod/client/models/package-tree.html">ema_08_.crisisMod.client.models</a>, </li>
@@ -136,8 +139,15 @@ loadScripts(document, 'script');</script>
 </ul>
 </li>
 <li class="circle">ema_08_.crisisMod.clans.data.<a href="ema_08_/crisisMod/clans/data/Clan.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.data">Clan</a></li>
+<li class="circle">ema_08_.crisisMod.clans.commands.<a href="ema_08_/crisisMod/clans/commands/ClanCreateCommand.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.commands">ClanCreateCommand</a></li>
+<li class="circle">ema_08_.crisisMod.clans.<a href="ema_08_/crisisMod/clans/ClanDamageHandler.html" class="type-name-link" title="class in ema_08_.crisisMod.clans">ClanDamageHandler</a></li>
 <li class="circle">ema_08_.crisisMod.clans.<a href="ema_08_/crisisMod/clans/ClanManager.html" class="type-name-link" title="class in ema_08_.crisisMod.clans">ClanManager</a></li>
+<li class="circle">ema_08_.crisisMod.network.packets.<a href="ema_08_/crisisMod/network/packets/ClanNameUpdatePacket.html" class="type-name-link" title="class in ema_08_.crisisMod.network.packets">ClanNameUpdatePacket</a></li>
+<li class="circle">ema_08_.crisisMod.clans.network.<a href="ema_08_/crisisMod/clans/network/ClanNetworkManager.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.network">ClanNetworkManager</a></li>
+<li class="circle">ema_08_.crisisMod.clans.<a href="ema_08_/crisisMod/clans/ClanNotificationHandler.html" class="type-name-link" title="class in ema_08_.crisisMod.clans">ClanNotificationHandler</a></li>
+<li class="circle">ema_08_.crisisMod.network.packets.<a href="ema_08_/crisisMod/network/packets/ClanRelationUpdatePacket.html" class="type-name-link" title="class in ema_08_.crisisMod.network.packets">ClanRelationUpdatePacket</a></li>
 <li class="circle">ema_08_.crisisMod.network.packets.<a href="ema_08_/crisisMod/network/packets/ClanSyncPacket.html" class="type-name-link" title="class in ema_08_.crisisMod.network.packets">ClanSyncPacket</a></li>
+<li class="circle">ema_08_.crisisMod.client.<a href="ema_08_/crisisMod/client/ClientClanData.html" class="type-name-link" title="class in ema_08_.crisisMod.client">ClientClanData</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.<a href="ema_08_/crisisMod/utils/commands/CommandBuilder.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands">CommandBuilder</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.abstr.<a href="ema_08_/crisisMod/utils/commands/abstr/CommandParts.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands.abstr">CommandParts</a></li>
 <li class="circle">ema_08_.crisisMod.utils.commands.abstr.<a href="ema_08_/crisisMod/utils/commands/abstr/CommandParts.CommandArgument.html" class="type-name-link" title="class in ema_08_.crisisMod.utils.commands.abstr">CommandParts.CommandArgument</a></li>
@@ -174,10 +184,15 @@ loadScripts(document, 'script');</script>
 <li class="circle">ema_08_.crisisMod.client.renderers.<a href="ema_08_/crisisMod/client/renderers/NameTagRenderer.html" class="type-name-link" title="class in ema_08_.crisisMod.client.renderers">NameTagRenderer</a></li>
 <li class="circle">ema_08_.crisisMod.network.<a href="ema_08_/crisisMod/network/NetworkHandler.html" class="type-name-link" title="class in ema_08_.crisisMod.network">NetworkHandler</a></li>
 <li class="circle">ema_08_.crisisMod.utils.<a href="ema_08_/crisisMod/utils/NtbUtils.html" class="type-name-link" title="class in ema_08_.crisisMod.utils">NtbUtils</a></li>
+<li class="circle">ema_08_.crisisMod.network.packets.<a href="ema_08_/crisisMod/network/packets/PlayerClanUpdatePacket.html" class="type-name-link" title="class in ema_08_.crisisMod.network.packets">PlayerClanUpdatePacket</a></li>
 <li class="circle">ema_08_.crisisMod.server.<a href="ema_08_/crisisMod/server/PlayerData.html" class="type-name-link" title="class in ema_08_.crisisMod.server">PlayerData</a></li>
+<li class="circle">ema_08_.crisisMod.network.packets.<a href="ema_08_/crisisMod/network/packets/PlayerRoleUpdatePacket.html" class="type-name-link" title="class in ema_08_.crisisMod.network.packets">PlayerRoleUpdatePacket</a></li>
 <li class="circle">ema_08_.crisisMod.server.utils.<a href="ema_08_/crisisMod/server/utils/Players.html" class="type-name-link" title="class in ema_08_.crisisMod.server.utils">Players</a></li>
 <li class="circle">ema_08_.crisisMod.registries.<a href="ema_08_/crisisMod/registries/PropsRegistry.html" class="type-name-link" title="class in ema_08_.crisisMod.registries">PropsRegistry</a></li>
 <li class="circle">ema_08_.crisisMod.registries.<a href="ema_08_/crisisMod/registries/RegistryHelpers.html" class="type-name-link" title="class in ema_08_.crisisMod.registries">RegistryHelpers</a></li>
+<li class="circle">ema_08_.crisisMod.clans.relations.<a href="ema_08_/crisisMod/clans/relations/RelationRequest.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.relations">RelationRequest</a></li>
+<li class="circle">ema_08_.crisisMod.clans.relations.<a href="ema_08_/crisisMod/clans/relations/RelationRequestManager.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.relations">RelationRequestManager</a></li>
+<li class="circle">ema_08_.crisisMod.clans.relations.<a href="ema_08_/crisisMod/clans/relations/RequestCleanupTask.html" class="type-name-link" title="class in ema_08_.crisisMod.clans.relations">RequestCleanupTask</a></li>
 </ul>
 </li>
 </ul>
