--- a/ema_08_/crisisMod/client/package-tree.html
+++ b/ema_08_/crisisMod/client/package-tree.html
@@ -59,6 +59,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
+<li class="circle">ema_08_.crisisMod.client.<a href="ClientClanData.html" class="type-name-link" title="class in ema_08_.crisisMod.client">ClientClanData</a></li>
 <li class="circle">ema_08_.crisisMod.client.<a href="HudDisplayer.html" class="type-name-link" title="class in ema_08_.crisisMod.client">HudDisplayer</a></li>
 <li class="circle">ema_08_.crisisMod.client.<a href="LocalData.html" class="type-name-link" title="class in ema_08_.crisisMod.client">LocalData</a></li>
 </ul>
