Update Javadoc from CrisisMod/CrisisMod@b5a8dc37e3940f6356fcaebbb6e8140c50c87425 CrisisMod/CrisisMod@b5a8dc37e3940f6356fcaebbb6e8140c50c87425

--- a/net/crisis/crisisMod/utils/commands/abstr/RegistrableCommand.html
+++ b/net/crisis/crisisMod/utils/commands/abstr/RegistrableCommand.html
@@ -75,7 +75,7 @@ loadScripts(document, 'script');</script>
 <section class="class-description" id="class-description">
 <dl class="notes">
 <dt>All Known Implementing Classes:</dt>
-<dd><code><a href="../../../server/deadMarks/DeadMarksAdminCommand.html" title="class in net.crisis.crisisMod.server.deadMarks">DeadMarksAdminCommand</a></code>, <code><a href="../../../server/deadMarks/DeadMarksPlayerCommand.html" title="class in net.crisis.crisisMod.server.deadMarks">DeadMarksPlayerCommand</a></code></dd>
+<dd><code><a href="../../../clans/commands/ClanCreateCommand.html" title="class in net.crisis.crisisMod.clans.commands">ClanCreateCommand</a></code>, <code><a href="../../../server/deadMarks/DeadMarksAdminCommand.html" title="class in net.crisis.crisisMod.server.deadMarks">DeadMarksAdminCommand</a></code>, <code><a href="../../../server/deadMarks/DeadMarksPlayerCommand.html" title="class in net.crisis.crisisMod.server.deadMarks">DeadMarksPlayerCommand</a></code></dd>
 </dl>
 <hr>
 <div class="type-signature"><span class="modifiers">public interface </span><span class="element-name type-name-label">RegistrableCommand</span></div>
