--- a/overview-tree.html
+++ b/overview-tree.html
@@ -141,7 +141,7 @@ loadScripts(document, 'script');</script>
 </ul>
 </li>
 <li class="circle">net.crisis.crisisMod.clans.data.<a href="net/crisis/crisisMod/clans/data/Clan.html" class="type-name-link" title="class in net.crisis.crisisMod.clans.data">Clan</a></li>
-<li class="circle">net.crisis.crisisMod.clans.commands.<a href="net/crisis/crisisMod/clans/commands/ClanCreateCommand.html" class="type-name-link" title="class in net.crisis.crisisMod.clans.commands">ClanCreateCommand</a></li>
+<li class="circle">net.crisis.crisisMod.clans.commands.<a href="net/crisis/crisisMod/clans/commands/ClanCreateCommand.html" class="type-name-link" title="class in net.crisis.crisisMod.clans.commands">ClanCreateCommand</a> (implements net.crisis.crisisMod.utils.commands.abstr.<a href="net/crisis/crisisMod/utils/commands/abstr/RegistrableCommand.html" title="interface in net.crisis.crisisMod.utils.commands.abstr">RegistrableCommand</a>)</li>
 <li class="circle">net.crisis.crisisMod.clans.handlers.<a href="net/crisis/crisisMod/clans/handlers/ClanDamageHandler.html" class="type-name-link" title="class in net.crisis.crisisMod.clans.handlers">ClanDamageHandler</a></li>
 <li class="circle">net.crisis.crisisMod.clans.handlers.<a href="net/crisis/crisisMod/clans/handlers/ClanEventHandler.html" class="type-name-link" title="class in net.crisis.crisisMod.clans.handlers">ClanEventHandler</a></li>
 <li class="circle">net.crisis.crisisMod.clans.handlers.<a href="net/crisis/crisisMod/clans/handlers/ClanJsonHandler.html" class="type-name-link" title="class in net.crisis.crisisMod.clans.handlers">ClanJsonHandler</a></li>
